First hello world commit

--- a/index.html
+++ b/index.html
@@ -1,23 +1,7 @@
-<!DOCTYPE html>
-
 <html>
-<head>
-  <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-  <title>Spoon-Knife</title>
-  <LINK href="styles.css" rel="stylesheet" type="text/css">
-</head>
-
-<body>
-
-<img src="forkit.gif" id="octocat" alt="" />
-
-<!-- Feel free to change this text here -->
-<p>
-  All Good? Lets party.
-</p>
-<p>
-  I wanna hang over tonight.
-</p>
-
-</body>
-</html>
+     <head>
+          <title>My Website Title</title>
+     </head>
+     <body>
+          Hello World
+     </body>
